<resources>
    <string name="app_name">TraveLink</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="accountEditDetailsStr">Edit Details</string>
    <string name="accountChangePassword">Change Password</string>
    <string name="accountFeedback">Feedback</string>
    <string name="accountAboutUs">About Us</string>
    <string name="accountLogout">Logout</string>
    <string name="accountSettings">Account Settings</string>
    <string name="accountMore">More</string>
    <string name="editDetailsSelectPhoto">Select Photo</string>
    <string name="editDetailsName">Name</string>
    <string name="editDetailsPhoneNum">Phone Number</string>
    <string name="editDetailsPhoneNumHint">0123456789</string>
    <string name="editDetailsGender">Gender</string>
    <string name="editDetailsNationality">Nationality</string>
    <string name="editDetailsGenderFemale">Female</string>
    <string name="editDetailsGenderMale">Male</string>
    <string name="editDetailsNationalityMalaysian">Malaysian</string>
    <string name="editDetailsNonMalaysian">Non-Malaysian</string>
    <string name="editDetailsIDNumber">ID/Passport Number</string>
    <string name="editDetailsIDNumberHint">010101101234/A12345678</string>
    <string name="editDetailsSave">Save</string>
    <string name="feedbackTitle">Share your feedback!</string>
    <string name="feedbackDesc">We would like to hear from you. Send us your feedback in the form.</string>
    <string name="feedbackCategory">Category</string>
    <string name="feedbackSubject">Subject</string>
    <string name="feedbackMessage">Message</string>
    <string name="feedbackMessageHint">Max length 300 characters</string>
    <string name="feedbackMessageBox">Tell us what happened</string>
    <string name="feedbackSubjectHint">e.g Bus Frequency Low in T250</string>
    <string name="feedbackSubmit">Submit</string>
    <string name="aboutUsDesc">TraveLink is a mobile application designed to assist public transport commuters in Kuala Lumpur. It allows users to view latest news, check live bus location and make payment.</string>
    <string name="aboutUsCompanyTitle">About Traveller</string>
    <string name="aboutUsCompanyDesc">Traveller is a company which was established since 2002. It owns and operates the stage bus service in Kuala Lumpur.</string>
    <string name="aboutUsHelpline">Helpline Operation Hours</string>
    <string name="aboutUsHelplineTime">Weekdays | 7.00 a.m. - 8.30 p.m.\nWeekend/Public Holidays | 8.30 a.m. - 5.30 p.m.</string>
    <string name="aboutUsPhoneNum">03–41450123</string>
    <string name="aboutUsEmail">cs_traveller@gmail.com</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_account">Account</string>
    <string name="top_up">Top Up</string>
    <string name="min_reload_amount_is_rm10">Min reload amount is RM10</string>
    <string name="rm300">RM 300</string>
    <string name="rm200">RM 200</string>
    <string name="rm100">RM 100</string>
    <string name="rm50">RM 50</string>
    <string name="rm20">RM 20</string>
    <string name="rm10">RM 10</string>
    <string name="boardingSuccessfully">Boarding Successfully!</string>
    <string name="station">Station</string>
    <string name="dateAndTme">Date and Time</string>
    <string name="fare">Fare</string>
    <string name="ok">OK</string>
    <string name="dropOffSuccessfully">Drop Off Successfully!</string>
    <string name="database_url">https://mad-ass-94890-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <string name="rm">RM</string>


    <string name="loginRegister">Don\'t have an account? \n Create an account</string>
    <string name="register">Register</string>
    <string name="loginLogin">Login</string>
    <string name="loginForgetPassword">Forget Password?</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="loginPassword">Password</string>
    <string name="loginEmail">Email</string>
    <string name="loginEmailHint">example@email.com</string>
    <string name="passwordHint">*********</string>
    <string name="registerRegister">Register</string>
    <string name="registerFullName">Full Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="registerTnC">I agree to the Terms and Conditions</string>
    <string name="registerLogin">Already have an account? \n Login!</string>
    <string name="forgetRemember">Suddenly remembered your password?\nLogin!</string>
    <string name="registerNameHint">Bob Gigachad</string>
    <string name="registerEmailHint">example@email.com</string>
    <string name="registerPasswordHint">*********</string>
    <string name="forgetPasswordForgetPassword">Forget Password</string>
    <string name="forgetPasswordEmail">Email</string>
    <string name="forgetPasswordSendEmail">Send Email Verification</string>
    <string name="forgetPasswordEmailHint">example@email.com</string>


    <string name="newsDetailTitle">News</string>
    <string name="newsDetailDate">Date</string>
    <string name="titleNews">News</string>
    <string name="titleNewsDetail">News Detail</string>
    <string name="homeSearchSchedule">Search Schedule </string>
    <string name="scanQR">Scan QR</string>
    <string name="scanSuccess">Scan QR Successful</string>
    <string name="scheduleItemDetails">Schedule Details</string>
    <string name="liveBusTrack">Live Bus Tracking</string>
    <string name="balanceLow">Low balance! Please top up!</string>
</resources>