<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/registerFragment"
        android:name="my.edu.tarc.travelink.ui.login.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="my.edu.tarc.travelink.ui.login.LoginFragment"
        android:label="@string/loginLogin"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="my.edu.tarc.travelink.ui.login.ForgetPasswordFragment"
        android:label="@string/forgetPassword"
        tools:layout="@layout/fragment_forget_password" />
</navigation>