<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterFragment" >

    <TextView
        android:id="@+id/registerHeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registerRegister"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/registerFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerHeaderTextView" />

    <EditText
        android:id="@+id/registerNameEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/registerNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerNameTextView"
        app:layout_constraintTop_toBottomOf="@+id/registerNameTextView" />

    <TextView
        android:id="@+id/registerEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registerEmail"
        app:layout_constraintStart_toStartOf="@+id/registerNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerNameEditText" />

    <EditText
        android:id="@+id/registerEmailEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerEmailTextView"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailTextView"
        android:hint="@string/registerEmailHint"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/registerPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registerPassword"
        app:layout_constraintStart_toStartOf="@+id/registerEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailEditText" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTextView"
        android:hint="@string/registerPasswordHint"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/registerConfirmPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registerConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/registerPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText" />

    <EditText
        android:id="@+id/registerConfirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/registerConfirmPasswordTextView"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordTextView"
        android:hint="@string/registerPasswordHint"
        android:importantForAutofill="no"
        />

    <CheckBox
        android:id="@+id/registerTnCCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTnC"
        app:layout_constraintStart_toStartOf="@+id/registerConfirmPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/registerConfirmPasswordEditText" />

    <Button
        android:id="@+id/registerRegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/registerRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTnCCheckbox" />

    <Button
        android:id="@+id/registerLoginButton"
        style="@style/NoBGNoBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/registerLogin"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerRegisterButton" />
</androidx.constraintlayout.widget.ConstraintLayout>