<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.editDetails.EditDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="160dp" />

    <ImageView
        android:id="@+id/editDetailsAccountProfilePictureImageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <Button
        android:id="@+id/editDetailsSelectPhotoBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/editDetailsSelectPhoto"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsAccountProfilePictureImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editDetailsAccountProfilePictureImageView" />

    <TextView
        android:id="@+id/editDetailsNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/editDetailsName"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editDetailsAccountProfilePictureImageView" />

    <EditText
        android:id="@+id/editDetailsNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editDetailsName"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editDetailsNameTextView" />

    <TextView
        android:id="@+id/editDetailsPhoneNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/editDetailsPhoneNum"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editDetailsNameTextView" />

    <EditText
        android:id="@+id/editDetailsPhoneNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editDetailsPhoneNumHint"
        android:inputType="phone"
        android:maxLength="11"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsPhoneNumTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editDetailsPhoneNumTextView" />

    <TextView
        android:id="@+id/editDetailsGenderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/editDetailsGender"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editDetailsPhoneNumTextView" />

    <RadioGroup
        android:id="@+id/editDetailsGenderRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsGenderTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editDetailsGenderTextView">

        <RadioButton
            android:id="@+id/editDetailsGenderFemaleRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editDetailsGenderFemale" />

        <RadioButton
            android:id="@+id/editDetailsGenderMaleRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/editDetailsGenderMale" />

    </RadioGroup>

    <TextView
        android:id="@+id/editDetailsNationalityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/editDetailsNationality"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editDetailsGenderTextView" />

    <RadioGroup
        android:id="@+id/editDetailsNationailityRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsNationalityTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editDetailsNationalityTextView">

        <RadioButton
            android:id="@+id/editDetailsNationalityMalaysian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editDetailsNationalityMalaysian" />

        <RadioButton
            android:id="@+id/editDetailsNationalityNonMalaysian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editDetailsNonMalaysian" />

    </RadioGroup>

    <TextView
        android:id="@+id/editDetailsIDNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:text="@string/editDetailsIDNumber"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editDetailsNationalityTextView" />

    <EditText
        android:id="@+id/editDetailsIDNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editDetailsIDNumberHint"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDetailsIDNumberTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editDetailsIDNumberTextView" />

    <Button
        android:id="@+id/editDetailsSaveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/editDetailsSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>